fixing some layout issues

--- a/game_styles.css
+++ b/game_styles.css
@@ -34,7 +34,7 @@
 }
 
 .scores{
-	float: left;
+	float:left;
 	margin: 5px;
 }
 
@@ -51,7 +51,7 @@
 }
 
 .tile{
-	height:120px;
+	height:75%;
 	width:150px;
 	float: left;
 	margin: 5px;
